--- a/styles.css
+++ b/styles.css
@@ -25,20 +25,7 @@ h2.sub-title {
     text-align: center;
 }
 
-#input-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #0062c4;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 1000;
-    flex-wrap: wrap; /* Añade esta línea para permitir que los elementos se envuelvan si es necesario */
-}
+
 
 .input-group {
     display: flex;
@@ -128,4 +115,74 @@ li button img {
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+/* Añade estas reglas en tu archivo CSS o dentro de un <style> en tu HTML */
+
+.anime-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px; /* Espacio entre cada elemento de la lista */
+}
+
+.anime-item .controls {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espacio entre el select y el botón de eliminar */
+    visibility: hidden; /* Oculto, pero mantiene el espacio reservado */
+}
+
+.anime-item:hover .controls,
+.anime-item .controls:hover {
+    visibility: visible; /* Mostrar cuando se pasa el mouse sobre el <li> o los controles */
+}
+
+
+.anime-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.anime-item .controls {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.navbar {
+    width: 100%;
+    height: 50px;
+    background-color: #0062c4;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    z-index: 1000;
+    position: fixed;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    justify-content: space-around;
+    flex-wrap: wrap; /* Añade esta línea para permitir que los elementos se envuelvan si es necesario */
+}
+
+#options-button {
+    width: 50px; /* Ajusta el tamaño de la imagen */
+    height: 50px;
+    cursor: pointer;
+}
+
+#auth-container {
+    position: absolute;
+    top: 10000px; /* Ajustado para estar debajo de la barra */
+    left: 100px;
+    display: none;
+    background: #f9f9f9;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
